<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="#1f2732">

    <View
        android:id="@+id/icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:background="@drawable/icon"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/iconCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
           app:cardBackgroundColor="#2c333d">

            <ImageView
                android:id="@+id/category_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"

                android:layout_margin="7dp"
                android:contentDescription="@string/icon" />


        </androidx.cardview.widget.CardView>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/iconCardView">

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:textSize="12sp"
                android:textColor="@color/white"/>


            <TextView
                android:id="@+id/amount"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/_200"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/_07_july_2022"
                android:textSize="10sp"
                android:textColor="@color/white"/>


        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>